- Anpassung von application.properties in BE für Connection zu IAM und DB

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,31 @@
+spring.thymeleaf.cache=false
+server.port=8080
 
+logging.level.jdbc=OFF
+logging.level.jdbc.sqltiming=DEBUG
+logging.level.jdbc.resultsettable=DEBUG
+
+spring.datasource.url= jdbc:postgresql://localhost:60000/keycloak
+spring.datasource.username= taskitory-client
+spring.datasource.password= irkLg-Y3-Kk_uH@QPhZ.ZKttLD@8jH2iscucd@aaLFDKF_uFGAQxCnbXaz!KTpJdw.-PrhZ!L2NYhz@LDuFtVRc*.66*t*7@k8M!
+spring.datasource.hikari.max-lifetime=600000
+spring.datasource.testWhileIdle=true
+spring.datasource.test-on-borrow=true
+spring.datasource.hikari.schema=backend
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
+
+spring.jpa.hibernate.ddl-auto= validate
+
+keycloak.realm                      = Taskitory-Realm
+keycloak.auth-server-url            = http://localhost:50003
+keycloak.ssl-required               = external
+keycloak.resource                   = taskitory-BE
+keycloak.credentials.secret         = T8vu@J_Dz93pENwWGsA3bJGAAMaRGce_qs8mmDg.*zou_L@CE3HogAqFU9ZdzprFRQGTGW87LNgsu.mNMBPm_7gjevs.3kpwaTaW
+keycloak.cors                       = true
+keycloak.verify-token-audience      = true
+keycloak.use-resource-role-mappings = false
+keycloak.bearer-only                = true
+keycloak.confidential-port          = 0
+keycloak.enabled                    = true
