- IAM-Integration in BE

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,13 +19,12 @@ spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto= validate
 
 keycloak.realm                      = Taskitory-Realm
-keycloak.auth-server-url            = http://localhost:50003
+keycloak.auth-server-url            = http://iam:8080/auth
 keycloak.ssl-required               = external
-keycloak.resource                   = taskitory-BE
-keycloak.credentials.secret         = T8vu@J_Dz93pENwWGsA3bJGAAMaRGce_qs8mmDg.*zou_L@CE3HogAqFU9ZdzprFRQGTGW87LNgsu.mNMBPm_7gjevs.3kpwaTaW
-keycloak.cors                       = true
+keycloak.resource                   = Taskitory-Client
+keycloak.credentials.secret         = r59D2mPYFstpoCcrtmR9V1QIUjyfAy9P
 keycloak.verify-token-audience      = true
-keycloak.use-resource-role-mappings = false
 keycloak.bearer-only                = true
-keycloak.confidential-port          = 0
 keycloak.enabled                    = true
+keycloak.use-resource-role-mappings = true
+keycloak.confidential-port          = 0
