--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,15 @@
             <artifactId>keycloak-spring-security-adapter</artifactId>
             <version>12.0.4</version>
         </dependency>
+        <dependency>
+            <groupId>javax.persistence</groupId>
+            <artifactId>javax.persistence-api</artifactId>
+            <version>2.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
