--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,29 +1,27 @@
-spring.thymeleaf.cache=false
-server.port=8080
+spring.thymeleaf.cache                  = false
+server.port                             = 8080
 
-logging.level.jdbc=OFF
-logging.level.jdbc.sqltiming=DEBUG
-logging.level.jdbc.resultsettable=DEBUG
+logging.level.jdbc                      = OFF
+logging.level.jdbc.sqltiming            = DEBUG
+logging.level.jdbc.resultsettable       = DEBUG
 
-spring.datasource.url= jdbc:postgresql://localhost:60000/keycloak
-spring.datasource.username= taskitory-client
-spring.datasource.password= irkLg-Y3-Kk_uH@QPhZ.ZKttLD@8jH2iscucd@aaLFDKF_uFGAQxCnbXaz!KTpJdw.-PrhZ!L2NYhz@LDuFtVRc*.66*t*7@k8M!
-spring.datasource.hikari.max-lifetime=600000
-spring.datasource.testWhileIdle=true
-spring.datasource.test-on-borrow=true
-spring.datasource.hikari.schema=backend
+spring.datasource.driver-class-name     = org.postgresql.Driver
+spring.datasource.url                   = jdbc:postgresql://${DATENBANK_ADDR_ALIAS}:${DATENBANK_PORT}/${DATENBANK_NAME}
+spring.datasource.username              = ${DATENBANK_CLIENT_USER}
+spring.datasource.password              = ${DATENBANK_CLIENT_PW}
+spring.datasource.hikari.max-lifetime   = 600000
+spring.datasource.testWhileIdle         = true
+spring.datasource.test-on-borrow        = true
+spring.datasource.hikari.schema         = backend
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto           = validate
 
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
-spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
-
-spring.jpa.hibernate.ddl-auto= validate
-
-keycloak.realm                      = Taskitory-Realm
-keycloak.auth-server-url            = http://iam:8080/auth
-keycloak.ssl-required               = external
-keycloak.resource                   = Taskitory-Client
-keycloak.credentials.secret         = r59D2mPYFstpoCcrtmR9V1QIUjyfAy9P
-keycloak.verify-token-audience      = true
-keycloak.bearer-only                = true
-keycloak.enabled                    = true
-keycloak.use-resource-role-mappings = true
+keycloak.realm                          = ${IAM_REALM_NAME}
+keycloak.auth-server-url                = https://${IAM_ADDR_ALIAS}:${IAM_PORT}/auth
+keycloak.ssl-required                   = external
+keycloak.resource                       = ${IAM_CLIENT_NAME}
+keycloak.credentials.secret             = ${IAM_CLIENT_PW}
+keycloak.verify-token-audience          = true
+keycloak.bearer-only                    = true
+keycloak.enabled                        = true
+keycloak.use-resource-role-mappings     = true
