- Umgebungsvariablen ins Englische übersetzt

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,9 @@ services:
     container_name: taskitory-db
     image: postgres:14.1
     environment:
-      - POSTGRES_DB=${DATENBANK_NAME}
-      - POSTGRES_USER=${DATENBANK_ADMIN_USER}
-      - POSTGRES_PASSWORD=${DATENBANK_ADMIN_PW}
+      - POSTGRES_DB=${DATABASE_NAME}
+      - POSTGRES_USER=${DATABASE_ADMIN_USER}
+      - POSTGRES_PASSWORD=${DATABASE_ADMIN_PW}
       - PGDATA=/data/postgres
     volumes:
       - ./postgres-volume:/data
@@ -22,12 +22,12 @@ services:
       - taskitory-net
     environment:
       - DB_VENDOR=postgres
-      - DB_USER=${DATENBANK_ADMIN_USER}
-      - DB_PASSWORD=${DATENBANK_ADMIN_PW}
-      - DB_ADDR=${DATENBANK_ADDR_ALIAS}
-      - DB_PORT=${DATENBANK_PORT}
-      - DB_DATABASE=${DATENBANK_NAME}
-      - DB_SCHEMA=${DATENBANK_IAM_SCHEMA}
+      - DB_USER=${DATABASE_ADMIN_USER}
+      - DB_PASSWORD=${DATABASE_ADMIN_PW}
+      - DB_ADDR=${DATABASE_ADDR_ALIAS}
+      - DB_PORT=${DATABASE_PORT}
+      - DB_DATABASE=${DATABASE_NAME}
+      - DB_SCHEMA=${DATABASE_IAM_SCHEMA}
       - KEYCLOAK_USER=${IAM_ADMIN_USER}
       - KEYCLOAK_PASSWORD=${IAM_ADMIN_PW}
     ports:
@@ -40,11 +40,11 @@ services:
     build:
       context: .
       args:
-        - DATENBANK_ADDR_ALIAS=${DATENBANK_ADDR_ALIAS}
-        - DATENBANK_PORT=${DATENBANK_PORT}
-        - DATENBANK_NAME=${DATENBANK_NAME}
-        - DATENBANK_CLIENT_USER=${DATENBANK_CLIENT_USER}
-        - DATENBANK_CLIENT_PW=${DATENBANK_CLIENT_PW}
+        - DATABASE_ADDR_ALIAS=${DATABASE_ADDR_ALIAS}
+        - DATABASE_PORT=${DATABASE_PORT}
+        - DATABASE_NAME=${DATABASE_NAME}
+        - DATABASE_CLIENT_USER=${DATABASE_CLIENT_USER}
+        - DATABASE_CLIENT_PW=${DATABASE_CLIENT_PW}
     networks:
       - taskitory-net
     ports:
