--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,9 @@ logging.level.jdbc                      = OFF
 logging.level.jdbc.sqltiming            = DEBUG
 logging.level.jdbc.resultsettable       = DEBUG
 
-spring.datasource.url                   = jdbc:postgresql://${DATENBANK_ADDR_ALIAS}:${DATENBANK_PORT}/${DATENBANK_NAME}
-spring.datasource.username              = ${DATENBANK_CLIENT_USER}
-spring.datasource.password              = ${DATENBANK_CLIENT_PW}
+spring.datasource.url                   = jdbc:postgresql://${DATABASE_ADDR_ALIAS}:${DATABASE_PORT}/${DATABASE_NAME}
+spring.datasource.username              = ${DATABASE_CLIENT_USER}
+spring.datasource.password              = ${DATABASE_CLIENT_PW}
 spring.datasource.hikari.max-lifetime   = 600000
 spring.datasource.testWhileIdle         = true
 spring.datasource.test-on-borrow        = true
