- Abstraction Modul gelöscht --> Inhalte in parent pom.xml integriert - IAM- DB- und REST-Connectoren in Adapter-Schicht überführt - Funktionen im DB-Connector entfernt --> überall GETTER- und SETTER-Annotationen - Kopie von DB-Modell in Domain-Schicht eingefügt --> JPA-Zeug entfernt - Dockerfile angepasst und für Caching optimiert - Kleine optische Anpassungen an pom.xml Dateien

--- a/Application/pom.xml
+++ b/Application/pom.xml
@@ -11,18 +11,13 @@
 
     <artifactId>Application</artifactId>
     <name>Application Layer</name>
-    <version>0.0.1</version>
-
-    <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
-    </properties>
+    <version>${application-version}</version>
 
     <dependencies>
         <dependency>
             <groupId>de.krayadev</groupId>
             <artifactId>Domain</artifactId>
-            <version>0.0.1</version>
+            <version>${domain-version}</version>
         </dependency>
     </dependencies>
 
