--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,6 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.6.2</version>
-        <relativePath/>
     </parent>
 
     <groupId>de.krayadev</groupId>
@@ -18,23 +17,54 @@
     <properties>
         <java.version>17</java.version>
         <target_dir>../target</target_dir>
+        <starter_class>Adapter/src/main/java/Krayadev/TaskitoryApplication.java</starter_class>
+        <domain-version>0.0.1</domain-version>
+        <application-version>0.0.1</application-version>
+        <adapter-version>0.0.1</adapter-version>
     </properties>
 
     <modules>
-        <module>Abstraction</module>
-        <!--<module>Domain</module>
+        <module>Domain</module>
         <module>Application</module>
-        <module>Adapter</module>-->
+        <module>Adapter</module>
     </modules>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <scope>runtime</scope>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>5.3.14</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.22</version>
+        </dependency>
+    </dependencies>
+
     <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>2.6.2</version>
-            </plugin>
-        </plugins>
         <directory>${target_dir}</directory>
+        <finalName>Taskitory.0.0.1</finalName>
     </build>
+
 </project>
