--- a/4-Plugins/src/main/resources/application.properties
+++ b/4-Plugins/src/main/resources/application.properties
@@ -6,8 +6,8 @@ logging.level.jdbc.sqltiming            = DEBUG
 logging.level.jdbc.resultsettable       = DEBUG
 
 spring.datasource.url                   = jdbc:postgresql://${DATABASE_ADDR_ALIAS}:${DATABASE_PORT}/${DATABASE_NAME}
-spring.datasource.username              = ${DATABASE_CLIENT_USER}
-spring.datasource.password              = ${DATABASE_CLIENT_PW}
+spring.datasource.username              = ${DATABASE_BE_CLIENT_USER}
+spring.datasource.password              = ${DATABASE_BE_CLIENT_PW}
 spring.datasource.hikari.max-lifetime   = 600000
 spring.datasource.testWhileIdle         = true
 spring.datasource.test-on-borrow        = true
