- JPA auf Domain schicht geschoben und mit vorhandenem modell vereint - Message hat typ Attribut bekommen (DB und JPA im BE) - maven error --> findet packages aus anderen Modulen beim Coden aber nicht beim Bauen

--- a/0-Abstraction/pom.xml
+++ b/0-Abstraction/pom.xml
@@ -11,7 +11,6 @@
 
     <artifactId>Abstraction</artifactId>
     <name>Abstraction Layer</name>
-    <version>${abstraction-version}</version>
 
     <dependencies>
         <dependency>
@@ -33,10 +32,31 @@
         </dependency>
 
         <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.13.1</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.22</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <debug>true</debug>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
