--- a/3-Adapter/pom.xml
+++ b/3-Adapter/pom.xml
@@ -11,14 +11,29 @@
 
     <artifactId>Adapter</artifactId>
     <name>Adapter Layer</name>
-    <version>${adapter-version}</version>
 
     <dependencies>
         <dependency>
             <groupId>de.krayadev</groupId>
             <artifactId>Application</artifactId>
-            <version>${application-version}</version>
+            <version>${app_version}</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <debug>true</debug>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
