--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.6.2</version>
+        <relativePath/>
     </parent>
 
     <groupId>de.krayadev</groupId>
@@ -17,12 +18,8 @@
     <properties>
         <java.version>17</java.version>
         <target_dir>../target</target_dir>
-        <starter_class>Plugins/src/main/java/Krayadev/TaskitoryApplication.java</starter_class>
-        <abstraction-version>0.0.1</abstraction-version>
-        <domain-version>0.0.1</domain-version>
-        <application-version>0.0.1</application-version>
-        <adapter-version>0.0.1</adapter-version>
-        <plugins-version>0.0.1</plugins-version>
+        <starter_class>Plugins/src/main/java/krayadev/TaskitoryApplication.java</starter_class>
+        <app_version>0.0.1</app_version>
     </properties>
 
     <modules>
@@ -35,7 +32,19 @@
 
     <build>
         <directory>${target_dir}</directory>
-        <finalName>Taskitory.0.0.1</finalName>
+        <finalName>Taskitory${app_version}</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <debug>true</debug>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
 
 </project>
