- Gesamten Code von package krayadev zu de.krayadev bewegt - Plugin-Schicht Spring-Data-Repos erweitern jetzt die Domain Repos --> löst Problem mit fehlenden Repo Beans - Spring Security EnableWebSecurity Annotation bewegt - Doku V9 - Automatische DB-Änderungen

--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <mainClass>krayadev.TaskitoryApplication</mainClass>
+                    <mainClass>de.krayadev.TaskitoryApplication</mainClass>
                     <outputFile>Taskitory${app_version}.jar</outputFile>
                     <outputDirectory>../target</outputDirectory>
                     <classifier>exe</classifier>
